tests/errors/E027.zen
void main() {
    let a: void = 4;    // E027: Cannot declare variable of type void
}